@@ -3954,6 +3954,7 @@ Improve loading robustness:
   (thanks to TheBB)
 + Fix org-repo-todo loading (thanks to TheBB)
 + Add =org-roam-server= package to visualise a =org-roam= database (thanks to KjartanOli)
++ Add =org-roam-protocol= support (thanks to KjartanOli)
 
 **** Osx
 - Re-factor and expand support for trash can (thanks to usharf)
